force window scrollbar on puzzles to prevent page shift - closes #11536

--- a/ui/puzzle/css/_layout.scss
+++ b/ui/puzzle/css/_layout.scss
@@ -6,6 +6,13 @@
   }
 }
 
+@include breakpoint(max-height 1050px) {
+  body {
+    overflow-y: scroll;
+    margin-bottom: 0;
+  }
+}
+
 .puzzle {
   grid-area: main;
   display: grid;
